@@ -90,7 +90,7 @@
 
       <varlistentry>
         <term><emphasis role="bold">CHAIN -
-        {P|I|F|O|T}[:{N|E|ER}]</emphasis></term>
+        {P|I|F|O|T}[:{N|NI|E|ER}]</emphasis></term>
 
         <listitem>
           <simplelist>
@@ -106,11 +106,13 @@
           </simplelist>
 
           <para>It may be optionally followed by a colon and an indication of
-          the connection state(s) at which the context is to be
+          the Netfilter connection state(s) at which the context is to be
           applied:</para>
 
           <simplelist>
             <member>:N - NEW connection</member>
+
+            <member>:NI - New or INVALID connection</member>
 
             <member>:E - ESTABLISHED connection</member>
 
