@@ -253,6 +253,9 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     versions are available in the configfiles directory within the
     tarball.
 
+11) The STATE subcolumn of the secmarks file now allow the value 'NI'
+    which will match packets in either NEW or INVALID state.
+
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
 ----------------------------------------------------------------------------
