@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.20 Final
 
 1)  Set /proc/sys/net/bridge/bridge_nf_call_ip6?tables.
 
+2)  Add 'NI' STATE in secmarks.
+
 Changes in Shorewall 4.4.20 RC 1
 
 1)  Update release documents.
